Fix: wrap long line

--- a/content/install-user-css.css
+++ b/content/install-user-css.css
@@ -99,4 +99,6 @@ button.install.installed {
 
 .main {
   flex-grow: 1;
+  overflow: auto;
+  overflow-wrap: break-word;
 }
